--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: es-check-action
 on: [push]
 jobs:
   es-check-action-job:
-    runs-on: windows-latest
+    runs-on: windows-2016
     steps:
       - uses: ali-kamalizade/es-check-action@1.0.2
         with:
