--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {},
   "scripts": {
     "test": "es-check",
-    "build": "uglifyjs lib/index.js -o dist/xlogger.min.js -c -m --source-map \"root='http://localhost:5500/test',url='xlogger.min.js.map'\""
+    "build": "uglifyjs lib/standalone.js -o dist/xlogger.min.js -c -m --source-map \"root='http://localhost:5501/test',url='xlogger.min.js.map'\""
   },
   "devDependencies": {
     "es-check": "^5.2.4",
+    "nodemon": "^2.0.12",
     "uglify-js": "^3.13.10"
   },
   "type": "module"
